// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing shouldHaveResult function should fail due to no test was passed 1`] = `
Object {
  "message": "    
    no assertions were provided to test
",
  "pass": false,
  "testName": "shouldHaveResult",
}
`;

exports[`testing shouldHaveResult function should return failed due to timeout and isNot false 1`] = `
Object {
  "message": "    
    assertion is not a function
",
  "pass": false,
  "testName": "shouldHaveResult",
}
`;

exports[`testing shouldHaveResult function should return failed due to timeout and isNot false 2`] = `
Object {
  "message": "    
    assertion is not a function
",
  "pass": false,
  "testName": "shouldHaveResult",
}
`;
